Fix the logo size on small devices
Makes the logo shrink, and centre vertically, when the page gets too
small to fit the regular size logo.

--- a/styles/scss/queerie.scss
+++ b/styles/scss/queerie.scss
@@ -25,7 +25,7 @@ $gqRed: #e52319;
 
 $headerHeight: 500px;
 $menuHeight: 68px;
-$logoHeight: $headerHeight - ($menuHeight * 2);
+$logoSize: $headerHeight - ($menuHeight * 2);
 $footerHeight: 194px;
 $primaryMargin: 40px;
 $footerLogoWidth: 200px;
@@ -259,6 +259,7 @@ body {
 
 #header {
   position:relative;
+  width: 100%;
   height: $headerHeight;
   background-color: $gqBrown;
   text-align: center;
@@ -272,9 +273,25 @@ body {
     background-size: $breakSmall;
   }
 
-  img.main-logo {
-    height: $logoHeight;
-    width: auto;
+  #logo-holder {
+    position: relative;
+    width: 100%;
+    height: $logoSize;
+
+    &:before {
+      content: " ";
+      display: inline-block;
+      vertical-align: middle;
+      height: 100%;
+    }
+
+    img.main-logo {
+      display: inline-block;
+      width: $logoSize;
+      max-width: 80%;
+      height: auto;
+      vertical-align: middle;
+    }
   }
 }
 
